add final code comments and readme file

--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="en">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,400,900" rel="stylesheet">
-  <script src="js/jquery-3.2.1.js"></script>
   <script src="js/script.js"></script>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>My page Title</title>
+  <title>Roman Numerals Converter</title>
 </head>
-
 <body>
-
+  <h1>Results are found in the console.</h1>
 </body>
-
 </html>
